# sample-videoanalysisperson

./: README.md  README_cn.md  Readme.md  Readme_cn.md  Readme_en.md  Third Party Open Source Software Notice .md  deploy.sh  readme.docx  run_present_server.sh  run_videoanalysispersonapp.sh  stop_videoanalysispersonapp.sh
MyModel/: README.md  aipp_inception_gender.cfg  aipp_vgg_ssd.cfg
presenterserver/: README  presenter_server.py
presenterserver/common/: app_manager.py
presenterserver/video_analysis/config/: config.conf  logging.conf
presenterserver/video_analysis/src/: video_analysis_message_pb2.py  video_analysis_server.py  web.py
presenterserver/video_analysis/ui/static/fonts/: glyphicons-halflings-regular.eot
presenterserver/video_analysis/ui/templates/: home.html
script/: build.sh  build_ezdvpp.sh  build_ffmpeg.sh  build_presenteragent.sh  deploy.sh  deploy_sdk.sh  func_util.sh  graph_template.config  prepare_graph.sh  prepare_model.sh  prepare_param.sh  prepare_presenter_server.sh  shape_inception_gender  shape_pedestrian  shape_vgg_ssd
src/: CMakeLists.txt  Main.cpp  Main.h  func_util.sh  graph_template.config  param_configure.conf  prepare_graph.sh  prepare_present_server.sh
src/age_inference/: age_inference.cpp  age_inference.h
src/common/: video_analysis_params.h
src/face_detection/: face_detection.cpp
src/gender_inference/: gender_inference.cpp
src/object_detection/: object_detection.cpp
src/object_detection_post/: object_detection_post.cpp
src/pedestrian_attr_inference/: pedestrian_attr_inference.cpp
src/video_analysis_post/: video_analysis_message.pb.cc  video_analysis_message.pb.cpp  video_analysis_message.pb.h  video_analysis_post.cpp
src/video_decode/: video_decode.cpp  video_decode.h
videoanalysispersonapp/: .project  Makefile  graph_template.config  main.cpp  videoanalysis.mind
videoanalysispersonapp/age_inference/: Makefile  age_inference.cpp
videoanalysispersonapp/face_detection/: Makefile  face_detection.cpp  face_detection.h
videoanalysispersonapp/gender_inference/: Makefile  gender_inference.cpp  gender_inference.h
videoanalysispersonapp/object_detection/: Makefile  object_detection.cpp  object_detection.h
videoanalysispersonapp/object_detection_post/: Makefile  object_detection_post.cpp  object_detection_post.h
videoanalysispersonapp/pedestrian_attr_inference/: Makefile  pedestrian_attr_inference.cpp  pedestrian_attr_inference.h
videoanalysispersonapp/video_analysis_post/: Makefile  video_analysis_message.pb.h  video_analysis_message.proto  video_analysis_post.cpp  video_analysis_post.h
videoanalysispersonapp/video_decode/: Makefile  video_decode.cpp
